--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,6 +29,9 @@ common-js:
 
   {% include nav.html %}
 
+        {% include social-networks-links.html %}
+
+
   {{ content }}
 
   {% include footer.html %}
