--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -894,6 +894,13 @@ pre {
   border: 1px solid rgba(0,0,0,0.1);
   border-left: 0.4375rem solid #444;
 }
+
+/* fix space around code blocks */
+pre,
+.highlight > pre {
+  margin-bottom: 1.5rem;
+}
+
 .highlight > pre:not([class~="highlight"]) { /* code block with line number */
   padding: 0;
 }
